scrollbar fix and color/greyscale update

--- a/src/app/build-page/preview-pane/preview-pane.component.css
+++ b/src/app/build-page/preview-pane/preview-pane.component.css
@@ -35,7 +35,7 @@
 }
 
 .flash {
-  background-color: #8bd4ffa6;
+  background-color: #b8e5ffdc;
 }
 
 /* Greyscale Class*/
